--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+script:
+  - python run.pyw
+  - python GUI/window.pyw
